--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@types/express": "^4.17.13",
     "@types/express-ws": "^3.0.1",
     "@types/node": "^16.3.3",
+    "axios": "^0.23.0",
     "cookie-session": "^1.4.0",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
@@ -47,6 +48,7 @@
     "ws": "^8.2.3"
   },
   "devDependencies": {
+    "@types/axios": "^0.14.0",
     "@types/cookie-session": "^2.0.43",
     "@types/cors": "^2.8.12",
     "@types/jest": "^26.0.24",
