--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "express": "^4.17.1",
     "express-ws": "^5.0.2",
     "helmet": "^4.6.0",
+    "moment-timezone": "^0.5.34",
     "mongoose": "^6.0.10",
     "passport": "^0.4.1",
     "passport-oauth": "^1.0.0",
@@ -52,6 +53,7 @@
     "@types/cookie-session": "^2.0.43",
     "@types/cors": "^2.8.12",
     "@types/jest": "^26.0.24",
+    "@types/moment-timezone": "^0.5.30",
     "@types/passport": "^1.0.7",
     "@types/request": "^2.48.7",
     "@types/ws": "^8.2.0",
