--- a/package.json
+++ b/package.json
@@ -26,9 +26,10 @@
   },
   "homepage": "https://github.com/TahaBilalCS/brobot#readme",
   "dependencies": {
-    "@twurple/auth": "^5.0.5",
-    "@twurple/chat": "^5.0.5",
-    "@twurple/eventsub": "^5.0.5",
+    "@twurple/api": "^5.0.9",
+    "@twurple/auth": "^5.0.9",
+    "@twurple/chat": "^5.0.9",
+    "@twurple/eventsub": "^5.0.9",
     "@types/express": "^4.17.13",
     "@types/express-ws": "^3.0.1",
     "@types/node": "^16.3.3",
