--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@twurple/auth": "^5.0.9",
     "@twurple/chat": "^5.0.9",
     "@twurple/eventsub": "^5.0.9",
+    "@twurple/eventsub-ngrok": "^5.0.9",
     "@types/express": "^4.17.13",
     "@types/express-ws": "^3.0.1",
     "@types/node": "^16.3.3",
