--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -32,6 +32,7 @@
     */
     "rules": {
         "@typescript-eslint/explicit-function-return-type": 1,
+        "@typescript-eslint/no-unused-vars": 2,
         "@typescript-eslint/restrict-template-expressions": [
             "error",
             {
@@ -54,12 +55,6 @@
         "no-console": 1,
         "no-debugger": 2,
         "eqeqeq": 2,
-        "no-unused-vars": [
-            2,
-            {
-                "args": "none"
-            }
-        ],
         "no-prototype-builtins": "warn"
     }
 }
