--- a/package.json
+++ b/package.json
@@ -2,12 +2,13 @@
   "name": "brobot",
   "version": "22.3.0",
   "description": "Running a websocket & https server on an AWS EC2 instance",
-  "main": "dist/index.js",
+  "main": "dist/src/index",
   "type": "module",
   "scripts": {
     "build": "rimraf dist && tsc",
-    "test": "npx jest --watch",
-    "dev": "cross-env NODE_ENV=development concurrently \"tsc -w\" \"nodemon -q -r dotenv/config  dist/index.js\"",
+    "test": "NODE_ENV=testing mocha --exit",
+    "dev": "tsc -w & pm2 kill && pm2 startOrRestart --update-env ecosystem.config.cjs",
+    "dev:old": "cross-env NODE_ENV=development concurrently \"tsc -w\" \"nodemon -q -r dotenv/config --experimental-modules --es-module-specifier-resolution=node dist/src/index\"",
     "deploy": "pm2 deploy ecosystem.config.cjs production",
     "lint": "eslint . --ext .ts",
     "stage": "echo \"No script just yet\"",
@@ -26,59 +27,64 @@
   },
   "homepage": "https://github.com/TahaBilalCS/brobot#readme",
   "dependencies": {
-    "@pkmn/randoms": "^0.4.24",
-    "@pkmn/sim": "^0.4.24",
-    "@twurple/api": "^5.0.9",
-    "@twurple/auth": "^5.0.9",
-    "@twurple/chat": "^5.0.9",
-    "@twurple/eventsub": "^5.0.9",
-    "@twurple/eventsub-ngrok": "^5.0.9",
+    "@pkmn/randoms": "^0.5.11",
+    "@pkmn/sim": "^0.5.11",
+    "@twurple/api": "^5.0.18",
+    "@twurple/auth": "^5.0.18",
+    "@twurple/chat": "^5.0.18",
+    "@twurple/eventsub": "^5.0.18",
+    "@twurple/eventsub-ngrok": "^5.0.18",
     "@types/express": "^4.17.13",
     "@types/express-ws": "^3.0.1",
-    "@types/node": "^16.3.3",
-    "axios": "^0.23.0",
-    "cookie-session": "^1.4.0",
+    "@types/node": "^17.0.22",
+    "axios": "^0.26.1",
+    "cookie-session": "^2.0.0",
     "cors": "^2.8.5",
-    "dotenv": "^10.0.0",
-    "express": "^4.17.1",
+    "dotenv": "^16.0.0",
+    "express": "^4.17.3",
     "express-ws": "^5.0.2",
-    "helmet": "^4.6.0",
+    "helmet": "^5.0.2",
     "moment-timezone": "^0.5.34",
-    "mongoose": "^6.0.10",
-    "passport": "^0.4.1",
+    "mongoose": "^6.2.7",
+    "passport": "^0.5.2",
     "passport-oauth": "^1.0.0",
     "request": "^2.88.2",
     "rimraf": "^3.0.2",
-    "typescript": "^4.3.5",
+    "typescript": "^4.6.2",
     "winston": "^3.6.0",
-    "ws": "^8.2.3"
+    "ws": "^8.5.0"
   },
   "devDependencies": {
     "@types/axios": "^0.14.0",
-    "@types/cookie-session": "^2.0.43",
+    "@types/chai": "^4.3.0",
+    "@types/cookie-session": "^2.0.44",
     "@types/cors": "^2.8.12",
-    "@types/jest": "^26.0.24",
+    "@types/mocha": "^9.1.0",
     "@types/moment-timezone": "^0.5.30",
     "@types/passport": "^1.0.7",
-    "@types/request": "^2.48.7",
-    "@types/ws": "^8.2.0",
-    "@typescript-eslint/eslint-plugin": "^4.28.3",
-    "@typescript-eslint/parser": "^4.28.3",
-    "concurrently": "^6.2.0",
+    "@types/request": "^2.48.8",
+    "@types/sinon": "^10.0.11",
+    "@types/ws": "^8.5.3",
+    "@typescript-eslint/eslint-plugin": "^5.16.0",
+    "@typescript-eslint/parser": "^5.16.0",
+    "chai": "^4.3.6",
+    "concurrently": "^7.0.0",
     "cross-env": "^7.0.3",
-    "eslint": "^7.31.0",
-    "eslint-config-prettier": "^8.3.0",
+    "eslint": "^8.11.0",
+    "eslint-config-prettier": "^8.5.0",
     "eslint-config-standard": "^16.0.3",
-    "eslint-plugin-import": "^2.23.4",
+    "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-prettier": "^3.4.0",
-    "eslint-plugin-promise": "^5.1.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-promise": "^6.0.0",
     "husky": "^7.0.0",
-    "lint-staged": "^11.0.1",
-    "nodemon": "^2.0.13",
-    "pm2": "^5.1.0",
-    "prettier": "^2.3.2",
-    "ts-jest": "^27.0.3"
+    "lint-staged": "^12.3.7",
+    "mocha": "^9.2.2",
+    "nodemon": "^2.0.15",
+    "pm2": "^5.2.0",
+    "prettier": "^2.6.0",
+    "sinon": "^13.0.1",
+    "ts-node": "^10.7.0"
   },
   "lint-staged": {
     "*.{js,ts}": [
