--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "rimraf dist && tsc",
     "test": "mocha",
     "dev": "tsc -w & pm2 kill && pm2 startOrRestart --update-env ecosystem.config.cjs",
-    "dev:old": "cross-env NODE_ENV=development concurrently \"tsc -w\" \"nodemon -q -r dotenv/config --experimental-modules --es-module-specifier-resolution=node dist/src/index\"",
+    "dev:old": "cross-env NODE_ENV=development concurrently \"tsc -w\" \"nodemon -q -r dotenv/config --es-module-specifier-resolution=node dist/index\"",
     "deploy": "pm2 deploy ecosystem.config.cjs production",
     "lint": "eslint . --ext .ts",
     "stage": "echo \"No script just yet\"",
@@ -88,7 +88,7 @@
   },
   "lint-staged": {
     "*.{js,ts}": [
-      "eslint --cache --fix",
+      "eslint --cache",
       "prettier --check"
     ]
   }
