--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "@twurple/eventsub-ngrok": "^5.0.18",
     "@types/express": "^4.17.13",
     "@types/express-ws": "^3.0.1",
-    "@types/node": "^17.0.22",
+    "@types/node": "^16.3.3",
     "axios": "^0.26.1",
     "cookie-session": "^2.0.0",
     "cors": "^2.8.5",
@@ -89,7 +89,7 @@
   },
   "lint-staged": {
     "*.{js,ts}": [
-      "eslint --cache",
+      "eslint --cache --fix",
       "prettier --check"
     ]
   }
