Update line ending formatting to manage different OS environments
- Install exact version of prettier for more consistent formatting between devs

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -21,9 +21,7 @@
         "project": ["./tsconfig.json"],
         "extraFileExtensions": true
     },
-    "plugins": [
-        "@typescript-eslint"
-    ],
+    "plugins": ["@typescript-eslint"],
     /*
       "off" - 0 (turns the rule off completely)
       "warn" - 1 (turns the rule on but won't make the linter fail)
