--- a/.mocharc.json
+++ b/.mocharc.json
@@ -1,14 +1,11 @@
 {
-  "extension": ["ts"],
-  "spec": "__tests__/**/*.test.ts",
-  "require": "ts-node/register",
-  "recursive": true,
-  "parallel": true,
-  "timeout": 2500,
-  "watch": true,
-  "watch-files": ["__tests__/**/*.ts"],
-  "node-option": [
-    "experimental-specifier-resolution=node",
-    "loader=ts-node/esm"
-  ]
+    "extension": ["ts"],
+    "spec": "__tests__/**/*.test.ts",
+    "require": "ts-node/register",
+    "recursive": true,
+    "parallel": true,
+    "timeout": 2500,
+    "watch": true,
+    "watch-files": ["__tests__/**/*.ts"],
+    "node-option": ["experimental-specifier-resolution=node", "loader=ts-node/esm"]
 }
