--- a/package.json
+++ b/package.json
@@ -1,91 +1,91 @@
 {
-  "name": "brobot",
-  "version": "22.4.0",
-  "description": "Running a websocket & https server on an AWS EC2 instance",
-  "main": "dist/src/index.js",
-  "type": "module",
-  "scripts": {
-    "build": "rimraf dist && tsc",
-    "test": "mocha",
-    "dev": "tsc -w & pm2 kill && pm2 startOrRestart --update-env ecosystem.config.cjs",
-    "prod:test": "cross-env NODE_ENV=production tsc",
-    "dev:old": "cross-env NODE_ENV=development concurrently \"tsc -w\" \"nodemon -q -r dotenv/config --es-module-specifier-resolution=node dist/src/index.js\"",
-    "deploy": "pm2 deploy ecosystem.config.cjs production",
-    "lint": "eslint . --ext .ts",
-    "stage": "echo \"No script just yet\"",
-    "preserve": "npm run build",
-    "format": "prettier --write 'src/**/*'.ts"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/TahaBilalCS/brobot.git"
-  },
-  "author": "Brother Bill",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/TahaBilalCS/brobot/issues"
-  },
-  "homepage": "https://github.com/TahaBilalCS/brobot#readme",
-  "dependencies": {
-    "@pkmn/randoms": "^0.5.11",
-    "@pkmn/sim": "^0.5.11",
-    "@twurple/api": "^5.0.18",
-    "@twurple/auth": "^5.0.18",
-    "@twurple/chat": "^5.0.18",
-    "@twurple/eventsub": "^5.0.18",
-    "@twurple/eventsub-ngrok": "^5.0.18",
-    "@types/cookie-session": "^2.0.44",
-    "@types/cors": "^2.8.12",
-    "@types/express": "^4.17.13",
-    "@types/express-ws": "^3.0.1",
-    "@types/mocha": "^9.1.0",
-    "@types/node": "^17.0.23",
-    "@types/passport": "^1.0.7",
-    "@types/request": "^2.48.8",
-    "@types/sinon": "^10.0.11",
-    "axios": "^0.26.1",
-    "cookie-session": "^2.0.0",
-    "cors": "^2.8.5",
-    "dotenv": "^16.0.0",
-    "express": "^4.17.3",
-    "express-ws": "^5.0.2",
-    "helmet": "^5.0.2",
-    "mocha": "^9.2.2",
-    "moment-timezone": "^0.5.34",
-    "mongoose": "^6.2.8",
-    "passport": "^0.5.2",
-    "passport-oauth": "^1.0.0",
-    "request": "^2.88.2",
-    "rimraf": "^3.0.2",
-    "sinon": "^13.0.1",
-    "typescript": "^4.6.2",
-    "winston": "^3.6.0",
-    "ws": "^8.5.0"
-  },
-  "devDependencies": {
-    "@types/chai": "^4.3.0",
-    "@types/ws": "^8.5.3",
-    "@typescript-eslint/eslint-plugin": "^5.16.0",
-    "@typescript-eslint/parser": "^5.16.0",
-    "chai": "^4.3.6",
-    "concurrently": "^7.0.0",
-    "cross-env": "^7.0.3",
-    "eslint": "^8.11.0",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-import": "^2.25.4",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-promise": "^6.0.0",
-    "lint-staged": "^12.3.7",
-    "nodemon": "^2.0.15",
-    "pm2": "^5.2.0",
-    "prettier": "^2.6.0",
-    "ts-node": "^10.7.0"
-  },
-  "lint-staged": {
-    "*.{js,ts}": [
-      "eslint --cache --fix",
-      "prettier --check"
-    ]
-  }
+    "name": "brobot",
+    "version": "22.4.0",
+    "description": "Running a websocket & https server on an AWS EC2 instance",
+    "main": "dist/src/index.js",
+    "type": "module",
+    "scripts": {
+        "build": "rimraf dist && tsc",
+        "test": "mocha",
+        "dev": "tsc -w & pm2 kill && pm2 startOrRestart --update-env ecosystem.config.cjs",
+        "prod:test": "cross-env NODE_ENV=production tsc",
+        "dev:old": "cross-env NODE_ENV=development concurrently \"tsc -w\" \"nodemon -q -r dotenv/config --es-module-specifier-resolution=node dist/src/index.js\"",
+        "deploy": "pm2 deploy ecosystem.config.cjs production",
+        "lint": "eslint . --ext .ts",
+        "stage": "echo \"No script just yet\"",
+        "preserve": "npm run build",
+        "format": "prettier --write ."
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/TahaBilalCS/brobot.git"
+    },
+    "author": "Brother Bill",
+    "license": "ISC",
+    "bugs": {
+        "url": "https://github.com/TahaBilalCS/brobot/issues"
+    },
+    "homepage": "https://github.com/TahaBilalCS/brobot#readme",
+    "dependencies": {
+        "@pkmn/randoms": "^0.5.11",
+        "@pkmn/sim": "^0.5.11",
+        "@twurple/api": "^5.0.18",
+        "@twurple/auth": "^5.0.18",
+        "@twurple/chat": "^5.0.18",
+        "@twurple/eventsub": "^5.0.18",
+        "@twurple/eventsub-ngrok": "^5.0.18",
+        "@types/cookie-session": "^2.0.44",
+        "@types/cors": "^2.8.12",
+        "@types/express": "^4.17.13",
+        "@types/express-ws": "^3.0.1",
+        "@types/mocha": "^9.1.0",
+        "@types/node": "^17.0.23",
+        "@types/passport": "^1.0.7",
+        "@types/request": "^2.48.8",
+        "@types/sinon": "^10.0.11",
+        "axios": "^0.26.1",
+        "cookie-session": "^2.0.0",
+        "cors": "^2.8.5",
+        "dotenv": "^16.0.0",
+        "express": "^4.17.3",
+        "express-ws": "^5.0.2",
+        "helmet": "^5.0.2",
+        "mocha": "^9.2.2",
+        "moment-timezone": "^0.5.34",
+        "mongoose": "^6.2.8",
+        "passport": "^0.5.2",
+        "passport-oauth": "^1.0.0",
+        "request": "^2.88.2",
+        "rimraf": "^3.0.2",
+        "sinon": "^13.0.1",
+        "typescript": "^4.6.2",
+        "winston": "^3.6.0",
+        "ws": "^8.5.0"
+    },
+    "devDependencies": {
+        "@types/chai": "^4.3.0",
+        "@types/ws": "^8.5.3",
+        "@typescript-eslint/eslint-plugin": "^5.16.0",
+        "@typescript-eslint/parser": "^5.16.0",
+        "chai": "^4.3.6",
+        "concurrently": "^7.0.0",
+        "cross-env": "^7.0.3",
+        "eslint": "^8.11.0",
+        "eslint-config-prettier": "^8.5.0",
+        "eslint-plugin-import": "^2.25.4",
+        "eslint-plugin-node": "^11.1.0",
+        "eslint-plugin-prettier": "^4.0.0",
+        "eslint-plugin-promise": "^6.0.0",
+        "lint-staged": "^12.3.7",
+        "nodemon": "^2.0.15",
+        "pm2": "^5.2.0",
+        "prettier": "2.6.0",
+        "ts-node": "^10.7.0"
+    },
+    "lint-staged": {
+        "*.{js,ts}": [
+            "eslint --cache --fix",
+            "prettier --check"
+        ]
+    }
 }
