--- a/.prettierrc
+++ b/.prettierrc
@@ -1,13 +1,20 @@
 {
-  "tabWidth": 4,
-  "singleQuote": true,
-  "semi": true,
-  "bracketSpacing": true,
-  "arrowParens": "avoid",
-  "cursorOffset": -1,
-  "endOfLine": "lf",
-  "printWidth": 120,
-  "trailingComma": "none",
-  "useTabs": false,
-  "parser": "typescript"
+    "tabWidth": 4,
+    "singleQuote": true,
+    "semi": true,
+    "bracketSpacing": true,
+    "arrowParens": "avoid",
+    "cursorOffset": -1,
+    "endOfLine": "lf",
+    "printWidth": 120,
+    "trailingComma": "none",
+    "useTabs": false,
+    "overrides": [
+        {
+            "files": ["*.ts"],
+            "options": {
+                "parser": "typescript"
+            }
+        }
+    ]
 }
