Update Typescript transpile step

--- a/package.json
+++ b/package.json
@@ -2,14 +2,14 @@
     "name": "brobot",
     "version": "22.4.0",
     "description": "Running a websocket & https server on an AWS EC2 instance",
-    "main": "dist/src/index.js",
+    "main": "dist/index.js",
     "type": "module",
     "scripts": {
         "build": "rimraf dist && tsc",
         "test": "mocha",
         "dev": "tsc -w & pm2 kill && pm2 startOrRestart --update-env ecosystem.config.cjs",
+        "dev:old": "cross-env NODE_ENV=development concurrently \"tsc -w\" \"nodemon -q -r dotenv/config --es-module-specifier-resolution=node dist/index.js\"",
         "prod:test": "cross-env NODE_ENV=production tsc",
-        "dev:old": "cross-env NODE_ENV=development concurrently \"tsc -w\" \"nodemon -q -r dotenv/config --es-module-specifier-resolution=node dist/src/index.js\"",
         "deploy": "pm2 deploy ecosystem.config.cjs production",
         "lint": "eslint . --ext .ts",
         "stage": "echo \"No script just yet\"",
