--- a/package.json
+++ b/package.json
@@ -6,13 +6,12 @@
     "type": "module",
     "scripts": {
         "build": "rimraf dist && tsc",
-        "test": "mocha",
+        "test": "c8 --all -r html -r text mocha",
+        "test-watch": "npm run test -- -w",
         "dev": "concurrently --kill-others \"tsc -w\" \"pm2-dev start ecosystem.config.cjs\"",
-        "prod:test": "cross-env NODE_ENV=production tsc",
         "deploy": "pm2 deploy ecosystem.config.cjs production",
+        "deploy-test": "cross-env NODE_ENV=production tsc",
         "lint": "eslint . --ext .ts",
-        "stage": "echo \"No script just yet\"",
-        "preserve": "npm run build",
         "format": "prettier --write ."
     },
     "repository": {
@@ -66,6 +65,7 @@
         "@types/ws": "^8.5.3",
         "@typescript-eslint/eslint-plugin": "^5.16.0",
         "@typescript-eslint/parser": "^5.16.0",
+        "c8": "^7.11.0",
         "chai": "^4.3.6",
         "concurrently": "^7.0.0",
         "cross-env": "^7.0.3",
