Unit tests. Improved logger utils and prettier formatting

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,7 +5,8 @@
     "env": {
         "browser": true,
         "es2021": true,
-        "node": true
+        "node": true,
+        "mocha": true
     },
     "parser": "@typescript-eslint/parser",
     "plugins": ["@typescript-eslint"],
