--- a/package.json
+++ b/package.json
@@ -2,14 +2,18 @@
     "name": "brobot",
     "version": "22.4.0",
     "description": "Running a websocket & https server on an AWS EC2 instance",
-    "main": "dist/src/index.js",
+    "main": "lib/index.js",
     "type": "module",
     "scripts": {
-        "build": "rimraf dist && tsc",
+        "type-check": "tsc --noEmit",
+        "type-check:watch": "npm run type-check -- --watch",
+        "build": "rimraf dist & rimraf lib && npm run build:types && npm run build:js",
+        "build:types": "tsc --emitDeclarationOnly",
+        "build:js": "babel src -d lib --extensions \".ts,.tsx\"",
+        "dev": "concurrently --kill-others \"npm run type-check:watch\" \"npm run build:js -- --watch\" \"pm2-dev start ecosystem.config.cjs\"",
+        "deploy": "pm2 deploy ecosystem.config.cjs production",
         "test": "c8 --all -r html -r text mocha",
         "test-watch": "npm run test -- -w",
-        "dev": "concurrently --kill-others \"tsc -w\" \"pm2-dev start ecosystem.config.cjs\"",
-        "deploy": "pm2 deploy ecosystem.config.cjs production",
         "lint": "eslint . --ext .ts",
         "format": "prettier --write ."
     },
@@ -36,6 +40,7 @@
         "@types/node": "^17.0.23",
         "axios": "^0.26.1",
         "cookie-session": "^2.0.0",
+        "core-js": "^3.21.1",
         "cors": "^2.8.5",
         "dotenv": "^16.0.0",
         "express": "^4.17.3",
@@ -47,11 +52,15 @@
         "passport-oauth": "^1.0.0",
         "request": "^2.88.2",
         "rimraf": "^3.0.2",
-        "typescript": "^4.6.2",
         "winston": "^3.6.0",
         "ws": "^8.5.0"
     },
     "devDependencies": {
+        "@babel/cli": "^7.17.6",
+        "@babel/core": "^7.17.9",
+        "@babel/preset-env": "^7.16.11",
+        "@babel/preset-typescript": "^7.16.7",
+        "@babel/register": "^7.17.7",
         "@types/chai": "^4.3.0",
         "@types/cookie-session": "^2.0.44",
         "@types/cors": "^2.8.12",
@@ -78,7 +87,8 @@
         "pm2": "^5.2.0",
         "prettier": "2.6.0",
         "sinon": "^13.0.1",
-        "ts-node": "^10.7.0"
+        "ts-node": "^10.7.0",
+        "typescript": "^4.6.3"
     },
     "lint-staged": {
         "*.{js,ts}": [
