--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,11 +6,12 @@
         "target": "ES6" /* Specify ECMAScript target version: 'ES3' (default), 'ES5', 'ES2015', 'ES2016', 'ES2017', 'ES2018', 'ES2019', 'ES2020', 'ES2021', or 'ESNEXT'. */,
         "module": "ESNext" /* Specify module code generation: 'none', 'commonjs', 'amd', 'system', 'umd', 'es2015', 'es2020', or 'ESNext'. */,
         // "lib": [],                                   /* Specify library files to be included in the compilation. */
-        // "allowJs": true,                             /* Allow javascript files to be compiled. */
+        "allowJs": true /* Allow javascript files to be compiled.  Process & infer types from .js files.*/,
         // "checkJs": true,                             /* Report errors in .js files. */
         // "jsx": "preserve",                           /* Specify JSX code generation: 'preserve', 'react-native', 'react', 'react-jsx' or 'react-jsxdev'. */
-        // "declaration": true,                         /* Generates corresponding '.d.ts' file. */
-        // "declarationMap": true,                      /* Generates a sourcemap for each corresponding '.d.ts' file. */
+        "declaration": true /* Generates corresponding '.d.ts' file. */,
+        // "declarationMap": true,                      /* Generates a sourcemap for each corresponding '.d.ts' file. Ensure that .d.ts files are created by tsc, but not .js files */
+        // "emitDeclarationOnly": true                  /* Only emit .d.ts files; do not emit .js files. */,
         "sourceMap": true /* Generates corresponding '.map' file. */,
         // "outFile": "./",                             /* Concatenate and emit output to single file. */
         "outDir": "dist" /* Redirect output structure to the directory. */,
@@ -18,10 +19,10 @@
         // "composite": true,                           /* Enable project compilation */
         // "tsBuildInfoFile": "./",                     /* Specify file to store incremental compilation information */
         // "removeComments": true,                      /* Do not emit comments to output. */
-        // "noEmit": true,                              /* Do not emit outputs. */
+        // "noEmit": true                               /* Do not emit outputs. Allow Babel to transform files. */,
         // "importHelpers": true,                       /* Import emit helpers from 'tslib'. */
         // "downlevelIteration": true,                  /* Provide full support for iterables in 'for-of', spread, and destructuring when targeting 'ES5' or 'ES3'. */
-        // "isolatedModules": true,                     /* Transpile each file as a separate module (similar to 'ts.transpileModule'). */
+        "isolatedModules": true /* Transpile each file as a separate module (similar to 'ts.transpileModule'). Ensure that Babel can safely transpile files in the TypeScript project */,
 
         /* Strict Type-Checking Options */
         "strict": true /* Enable all strict type-checking options. */,
@@ -50,7 +51,7 @@
         // "typeRoots": [],                             /* List of folders to include type definitions from. */
         // "types": [],                                 /* Type declaration files to be included in compilation. */
         // "allowSyntheticDefaultImports": true,        /* Allow default imports from modules with no default export. This does not affect code emit, just typechecking. */
-        "esModuleInterop": true /* Enables emit interoperability between CommonJS and ES Modules via creation of namespace objects for all imports. Implies 'allowSyntheticDefaultImports'. */,
+        "esModuleInterop": true /* Enables emit interoperability between CommonJS and ES Modules via creation of namespace objects for all imports. Implies 'allowSyntheticDefaultImports'. Import non-ES modules as default imports. */,
         // "preserveSymlinks": true,                    /* Do not resolve the real path of symlinks. */
         // "allowUmdGlobalAccess": true,                /* Allow accessing UMD globals from modules. */
 
@@ -68,5 +69,6 @@
         "skipLibCheck": true /* Skip type checking of declaration files. */,
         "forceConsistentCasingInFileNames": true /* Disallow inconsistently-cased references to the same file. */
     },
-    "exclude": ["node_modules"]
+    "exclude": ["node_modules"],
+    "include": ["src/**/*", "__tests__/**/*"]
 }
