Switch to yaml config to allow comments

--- a/.mocharc.yaml
+++ b/.mocharc.yaml
@@ -1,9 +1,9 @@
 {
     "extension": ["ts"],
     "spec": "__tests__/**/*.test.ts",
-    "require": ["@babel/register"], // Pre-Babel: "ts-node/register"
+    "require": ["@babel/register"], # Pre-Babel: "ts-node/register"
     "recursive": true,
-    "parallel": true, // true if running tests normally (--w enabled/disabled), false if only testing single case
+    "parallel": true, # true if running tests normally (--w enabled/disabled), false if only testing single case
     "timeout": 2500,
     "full-trace": true,
     "exit": true,
