--- a/.mocharc.yaml
+++ b/.mocharc.yaml
@@ -7,7 +7,7 @@
     "timeout": 2500,
     "full-trace": true,
     "exit": true,
-    "watch": false, // ESM is currently not supported by mocha with -w when testing a single case (eg. describe.only)
+    "watch": false, # ESM is currently not supported by mocha with -w when testing a single case (eg. describe.only)
     "watch-files": ["__tests__/**/*.ts", "src/**/*.ts"],
     "node-option": ["experimental-specifier-resolution=node", "loader=ts-node/esm"]
 }
