--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "main": "lib/index.js",
     "type": "module",
     "engines": {
-        "node": "^17.18.0"
+        "node": ">=17.8.0"
     },
     "scripts": {
         "type-check": "tsc --noEmit",
