--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,10 +6,10 @@
         "target": "ES6" /* Specify ECMAScript target version: 'ES3' (default), 'ES5', 'ES2015', 'ES2016', 'ES2017', 'ES2018', 'ES2019', 'ES2020', 'ES2021', or 'ESNEXT'. */,
         "module": "ESNext" /* Specify module code generation: 'none', 'commonjs', 'amd', 'system', 'umd', 'es2015', 'es2020', or 'ESNext'. */,
         // "lib": [],                                   /* Specify library files to be included in the compilation. */
-        "allowJs": true /* Allow javascript files to be compiled.  Process & infer types from .js files.*/,
+        // "allowJs": true                              /* Allow javascript files to be compiled.  Process & infer types from .js files.*/,
         // "checkJs": true,                             /* Report errors in .js files. */
         // "jsx": "preserve",                           /* Specify JSX code generation: 'preserve', 'react-native', 'react', 'react-jsx' or 'react-jsxdev'. */
-        "declaration": true /* Generates corresponding '.d.ts' file. */,
+        // "declaration": true /* Generates corresponding '.d.ts' file. */,
         // "declarationMap": true,                      /* Generates a sourcemap for each corresponding '.d.ts' file. Ensure that .d.ts files are created by tsc, but not .js files */
         // "emitDeclarationOnly": true                  /* Only emit .d.ts files; do not emit .js files. */,
         "sourceMap": true /* Generates corresponding '.map' file. */,
@@ -22,7 +22,7 @@
         // "noEmit": true                               /* Do not emit outputs. Allow Babel to transform files. */,
         // "importHelpers": true,                       /* Import emit helpers from 'tslib'. */
         // "downlevelIteration": true,                  /* Provide full support for iterables in 'for-of', spread, and destructuring when targeting 'ES5' or 'ES3'. */
-        "isolatedModules": true /* Transpile each file as a separate module (similar to 'ts.transpileModule'). Ensure that Babel can safely transpile files in the TypeScript project */,
+        // "isolatedModules": true /* Transpile each file as a separate module (similar to 'ts.transpileModule'). Ensure that Babel can safely transpile files in the TypeScript project */,
 
         /* Strict Type-Checking Options */
         "strict": true /* Enable all strict type-checking options. */,
