--- a/.mocharc.yaml
+++ b/.mocharc.yaml
@@ -9,5 +9,5 @@
     "exit": true,
     "watch": false, # ESM is currently not supported by mocha with -w when testing a single case (eg. describe.only)
     "watch-files": ["__tests__/**/*.ts", "src/**/*.ts"],
-    "node-option": ["experimental-specifier-resolution=node", "loader=ts-node/esm"]
+    "node-option": ["loader=ts-node/esm"] # "experimental-specifier-resolution=node",
 }
