--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "brobot",
     "version": "22.4.0",
     "description": "Running a websocket & https server on an AWS EC2 instance",
-    "main": "dist/src/index.js",
+    "main": "dist/index.js",
     "type": "module",
     "engines": {
         "node": ">=17.8.0"
