--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
         /* Visit https://aka.ms/tsconfig.json to read more about this file */
         /* Basic Options */
         // "incremental": true,                         /* Enable incremental compilation */
-        "target": "ES6" /* Specify ECMAScript target version: 'ES3' (default), 'ES5', 'ES2015', 'ES2016', 'ES2017', 'ES2018', 'ES2019', 'ES2020', 'ES2021', or 'ESNEXT'. */,
+        "target": "ES2021" /* Node v16 works well with ES2021. Specify ECMAScript target version: 'ES3' (default), 'ES5', 'ES2015', 'ES2016', 'ES2017', 'ES2018', 'ES2019', 'ES2020', 'ES2021', or 'ESNEXT'. */,
         "module": "ESNext" /* Specify module code generation: 'none', 'commonjs', 'amd', 'system', 'umd', 'es2015', 'es2020', or 'ESNext'. */,
         // "lib": [],                                   /* Specify library files to be included in the compilation. */
         // "allowJs": true                              /* Allow javascript files to be compiled.  Process & infer types from .js files.*/,
@@ -12,10 +12,10 @@
         // "declaration": true /* Generates corresponding '.d.ts' file. */,
         // "declarationMap": true,                      /* Generates a sourcemap for each corresponding '.d.ts' file. Ensure that .d.ts files are created by tsc, but not .js files */
         // "emitDeclarationOnly": true                  /* Only emit .d.ts files; do not emit .js files. */,
-        "sourceMap": true /* Generates corresponding '.map' file. */,
+        "sourceMap": true /* Generates corresponding '.map' file. Help for debugging */,
         // "outFile": "./",                             /* Concatenate and emit output to single file. */
         "outDir": "dist" /* Redirect output structure to the directory. */,
-        // "rootDir": "./",                             /* Specify the root directory of input files. Use to control the output directory structure with --outDir. */
+        "rootDir": "src" /* Specify the root directory of input files. Use to control the output directory structure with --outDir. */,
         // "composite": true,                           /* Enable project compilation */
         // "tsBuildInfoFile": "./",                     /* Specify file to store incremental compilation information */
         // "removeComments": true,                      /* Do not emit comments to output. */
@@ -47,7 +47,7 @@
         "moduleResolution": "node" /* Specify module resolution strategy: 'node' (Node.js) or 'classic' (TypeScript pre-1.6). */,
         // "baseUrl": "./",                             /* Base directory to resolve non-absolute module names. */
         // "paths": {},                                 /* A series of entries which re-map imports to lookup locations relative to the 'baseUrl'. */
-        // "rootDirs": [],                              /* List of root folders whose combined content represents the structure of the project at runtime. */
+        // "rootDirs": ["src", "__tests__"] /* List of root folders whose combined content represents the structure of the project at runtime. */,
         // "typeRoots": [],                             /* List of folders to include type definitions from. */
         // "types": [],                                 /* Type declaration files to be included in compilation. */
         // "allowSyntheticDefaultImports": true,        /* Allow default imports from modules with no default export. This does not affect code emit, just typechecking. */
@@ -69,6 +69,6 @@
         "skipLibCheck": true /* Skip type checking of declaration files. */,
         "forceConsistentCasingInFileNames": true /* Disallow inconsistently-cased references to the same file. */
     },
-    "exclude": ["node_modules"],
-    "include": ["src/**/*", "__tests__/**/*"]
+    "exclude": ["node_modules", "__tests__", "dist"],
+    "include": ["src/**/*"] //"__tests__/**/*"
 }
