--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
   "devDependencies": {
     "express": "^4.18.1",
     "pm2": "^5.2.0"
+  },
+  "dependencies": {
+    "express-ws": "^5.0.2"
   }
 }
