--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@nestjs/common": "^9.0.11",
     "@nestjs/core": "^9.0.11",
     "@nestjs/platform-express": "^9.0.11",
+    "@prisma/client": "^4.2.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.5.6"
@@ -43,6 +44,7 @@
     "jest": "^28.1.3",
     "pm2": "^5.2.0",
     "prettier": "^2.7.1",
+    "prisma": "^4.2.1",
     "source-map-support": "^0.5.21",
     "supertest": "^6.2.4",
     "ts-jest": "^28.0.8",
