--- a/package.json
+++ b/package.json
@@ -3,11 +3,15 @@
     "version": "1.0.0",
     "description": "Brobot NestJS Typescript Starter",
     "license": "MIT",
+    "engines": {
+        "node": ">=16.17.0"
+    },
     "scripts": {
         "prebuild": "rimraf dist",
         "build": "nest build",
         "format": "prettier --write \"**.js\" \"src/**/*.ts\" \"test/**/*.ts\"",
         "start": "nest start",
+        "dev2": "pm2 startOrRestart ecosystem.config.js",
         "dev": "nest start --watch",
         "start:debug": "nest start --debug --watch",
         "start:prod": "node dist/main",
@@ -21,6 +25,7 @@
     },
     "dependencies": {
         "@nestjs/common": "^9.0.11",
+        "@nestjs/config": "^2.2.0",
         "@nestjs/core": "^9.0.11",
         "@nestjs/platform-express": "^9.0.11",
         "@prisma/client": "^4.2.1",
