--- a/package.json
+++ b/package.json
@@ -27,36 +27,43 @@
         "@nestjs/common": "^9.0.11",
         "@nestjs/config": "^2.2.0",
         "@nestjs/core": "^9.0.11",
+        "@nestjs/passport": "^9.0.0",
         "@nestjs/platform-express": "^9.0.11",
-        "@prisma/client": "^4.2.1",
+        "@prisma/client": "^4.3.1",
+        "@quixo3/prisma-session-store": "^3.1.9",
+        "express-session": "^1.17.3",
+        "passport": "^0.6.0",
+        "passport-twitch-new": "^0.0.2",
         "prisma": "^4.3.1",
         "reflect-metadata": "^0.1.13",
         "rimraf": "^3.0.2",
         "rxjs": "^7.5.6"
     },
     "devDependencies": {
-        "@nestjs/cli": "^9.1.2",
-        "@nestjs/schematics": "^9.0.1",
+        "@nestjs/cli": "^9.1.3",
+        "@nestjs/schematics": "^9.0.3",
         "@nestjs/testing": "^9.0.11",
         "@types/express": "^4.17.13",
-        "@types/jest": "^28.1.7",
-        "@types/node": "^18.7.6",
+        "@types/express-session": "^1.17.5",
+        "@types/jest": "^29.0.1",
+        "@types/node": "^18.7.17",
+        "@types/passport": "^1.0.11",
         "@types/supertest": "^2.0.12",
-        "@typescript-eslint/eslint-plugin": "^5.33.1",
-        "@typescript-eslint/parser": "^5.33.1",
-        "eslint": "^8.22.0",
+        "@typescript-eslint/eslint-plugin": "^5.37.0",
+        "@typescript-eslint/parser": "^5.37.0",
+        "eslint": "8.22.0",
         "eslint-config-prettier": "^8.5.0",
         "eslint-plugin-prettier": "^4.2.1",
-        "jest": "^28.1.3",
+        "jest": "^29.0.3",
         "pm2": "^5.2.0",
         "prettier": "^2.7.1",
         "source-map-support": "^0.5.21",
         "supertest": "^6.2.4",
-        "ts-jest": "^28.0.8",
+        "ts-jest": "^29.0.0",
         "ts-loader": "^9.3.1",
         "ts-node": "^10.9.1",
         "tsconfig-paths": "^4.1.0",
-        "typescript": "^4.7.4"
+        "typescript": "^4.8.3"
     },
     "jest": {
         "moduleFileExtensions": [
