--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
         "@nestjs/platform-express": "^9.0.11",
         "@prisma/client": "^4.3.1",
         "@quixo3/prisma-session-store": "^3.1.9",
+        "cors": "^2.8.5",
         "express-session": "^1.17.3",
         "passport": "^0.6.0",
         "passport-twitch-new": "^0.0.2",
@@ -43,6 +44,7 @@
         "@nestjs/cli": "^9.1.3",
         "@nestjs/schematics": "^9.0.3",
         "@nestjs/testing": "^9.0.11",
+        "@types/cors": "^2.8.12",
         "@types/express": "^4.17.13",
         "@types/express-session": "^1.17.5",
         "@types/jest": "^29.0.1",
