--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
         "@nestjs/core": "^9.0.11",
         "@nestjs/passport": "^9.0.0",
         "@nestjs/platform-express": "^9.0.11",
+        "@nestjs/platform-ws": "^9.1.1",
+        "@nestjs/websockets": "^9.1.1",
         "@prisma/client": "^4.3.1",
         "@quixo3/prisma-session-store": "^3.1.9",
         "express-session": "^1.17.3",
