--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
         "build": "nest build",
         "format": "prettier --write \"**.js\" \"src/**/*.ts\" \"test/**/*.ts\"",
         "start": "nest start",
+        "start:2": "nest build && tsc-watch --project tsconfig.build.json --onSuccess \"pm2-dev start ecosystem.config.js\"",
+        "start:3": "tsc-watch --project tsconfig.build.json --onSuccess \"node dist/main.js\"",
         "dev2": "pm2 startOrRestart ecosystem.config.js",
-        "dev": "nest start --watch",
+        "dev": "NODE_ENV=development nest start --watch",
         "start:debug": "nest start --debug --watch",
         "start:prod": "node dist/main",
         "deploy": "pm2 deploy ecosystem.config.js production",
@@ -31,12 +33,16 @@
         "@nestjs/platform-express": "^9.0.11",
         "@nestjs/platform-ws": "^9.1.1",
         "@nestjs/websockets": "^9.1.1",
-        "@prisma/client": "^4.3.1",
+        "@prisma/client": "^4.4.0",
         "@quixo3/prisma-session-store": "^3.1.9",
+        "@twurple/api": "^5.2.4",
+        "@twurple/auth": "^5.2.4",
+        "@twurple/chat": "^5.2.4",
+        "@twurple/eventsub": "^5.2.4",
+        "@twurple/eventsub-ngrok": "^5.2.4",
         "express-session": "^1.17.3",
         "passport": "^0.6.0",
         "passport-twitch-new": "^0.0.2",
-        "prisma": "^4.3.1",
         "reflect-metadata": "^0.1.13",
         "rimraf": "^3.0.2",
         "rxjs": "^7.5.6"
@@ -51,6 +57,7 @@
         "@types/jest": "^29.0.1",
         "@types/node": "^18.7.17",
         "@types/passport": "^1.0.11",
+        "@types/passport-local": "^1.0.34",
         "@types/supertest": "^2.0.12",
         "@typescript-eslint/eslint-plugin": "^5.37.0",
         "@typescript-eslint/parser": "^5.37.0",
@@ -60,11 +67,13 @@
         "jest": "^29.0.3",
         "pm2": "^5.2.0",
         "prettier": "^2.7.1",
+        "prisma": "^4.4.0",
         "source-map-support": "^0.5.21",
         "supertest": "^6.2.4",
         "ts-jest": "^29.0.0",
         "ts-loader": "^9.3.1",
         "ts-node": "^10.9.1",
+        "tsc-watch": "^5.0.3",
         "tsconfig-paths": "^4.1.0",
         "typescript": "^4.8.3"
     },
