--- a/package.json
+++ b/package.json
@@ -34,9 +34,10 @@
         "@nestjs/platform-express": "^9.0.11",
         "@nestjs/platform-ws": "^9.1.1",
         "@nestjs/websockets": "^9.1.1",
+        "@pkmn/data": "^0.6.2",
         "@pkmn/randoms": "^0.6.2",
         "@pkmn/sim": "^0.6.2",
-        "@prisma/client": "^4.4.0",
+        "@prisma/client": "^4.5.0",
         "@quixo3/prisma-session-store": "^3.1.9",
         "@twurple/api": "^5.2.4",
         "@twurple/auth": "^5.2.4",
@@ -72,7 +73,7 @@
         "jest": "^29.0.3",
         "pm2": "^5.2.0",
         "prettier": "^2.7.1",
-        "prisma": "^4.4.0",
+        "prisma": "^4.5.0",
         "source-map-support": "^0.5.21",
         "supertest": "^6.2.4",
         "ts-jest": "^29.0.0",
