--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
         "@pkmn/data": "^0.6.2",
         "@pkmn/randoms": "^0.6.2",
         "@pkmn/sim": "^0.6.2",
-        "@prisma/client": "^4.5.0",
+        "@prisma/client": "^4.6.0",
         "@quixo3/prisma-session-store": "^3.1.9",
         "@twurple/api": "^5.2.4",
         "@twurple/auth": "^5.2.4",
@@ -46,6 +46,7 @@
         "@twurple/eventsub-ngrok": "^5.2.4",
         "cron": "^2.1.0",
         "express-session": "^1.17.3",
+        "helmet": "^6.0.0",
         "passport": "^0.6.0",
         "passport-twitch-new": "^0.0.2",
         "reflect-metadata": "^0.1.13",
@@ -73,7 +74,7 @@
         "jest": "^29.0.3",
         "pm2": "^5.2.0",
         "prettier": "^2.7.1",
-        "prisma": "^4.5.0",
+        "prisma": "^4.6.0",
         "source-map-support": "^0.5.21",
         "supertest": "^6.2.4",
         "ts-jest": "^29.0.0",
