--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "test:e2e": "jest --config ./test/jest-e2e.json"
     },
     "dependencies": {
+        "@2toad/profanity": "^2.2.0",
         "@nestjs/axios": "^0.1.0",
         "@nestjs/common": "^9.0.11",
         "@nestjs/config": "^2.2.0",
